# ChangeLog for dev-db/mytop
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mytop/ChangeLog,v 1.3 2004/06/26 18:54:00 stuart Exp $

  26 Jun 2004; Stuart Herbert <stuart@gentoo.org> mytop-1.4.ebuild:
  Added missing dependencies; this can be marked stable when all the
  dependencies are stable

*mytop-1.4 (03 May 2004)

  03 May 2004; Robin H. Johnson <robbat2@gentoo.org> mytop-1.4.ebuild:
  initial commit, original ebuild from bug #36608, Adam Gent
  <adam.gent@hat-technologies.ltd.uk>.
