@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mytop
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mytop/ChangeLog,v 1.3 2004/06/26 18:54:00 stuart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mytop/ChangeLog,v 1.4 2004/06/29 17:07:18 agriffis Exp $
+
+  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> mytop-1.4.ebuild:
+  add sed-4 dep
 
   26 Jun 2004; Stuart Herbert <stuart@gentoo.org> mytop-1.4.ebuild:
   Added missing dependencies; this can be marked stable when all the
